--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,18 +47,9 @@ h2{
     border:none;
     border-radius: 25px;
     /* padding: 4px; */
-    margin: 10px;
+    margin: 10%;
     font-size: 20px;
-    align-self: center
-
-}
-.card-info, .trackList{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
-    margin: 5px;
-    padding: 5px;
-    float: left;
-
+    align-self: center;
 }
 .card-header{
     font-family: 'Major Mono Display', monospace;
@@ -69,9 +60,15 @@ h2{
 #player{
     float:right;
 }
+.trackList, .recent-searches, .card-info{
+    margin: 1% 3%;
+    float: left;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+}
 
 
-/* // Small devices (landscape phones, 576px and up)
+// Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) { ... }
 
 // Medium devices (tablets, 768px and up)
@@ -81,4 +78,4 @@ h2{
 @media (min-width: 992px) { ... }
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... } */
+@media (min-width: 1200px) { ... }
