--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,11 @@ h2{
 }
 .trackList, .recent-searches, .card-info{
     margin: 1% 3%;
-    float: left;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+}
+#wiki{
+    margin: 1% 3%;
     font-family: 'Montserrat', sans-serif;
     font-size: 20px;
 }
